--- a/style.css
+++ b/style.css
@@ -9,3 +9,19 @@
     height: 250px;
 
 }
+
+.header-image img {
+    /* margin-bottom: 0px; */
+    height: 375px;
+    width: 350px;
+    background-image: url(images/header/mbbg.png);
+}
+
+h1 {
+    font-family: 'Lobster', cursive;
+}
+
+.football-image img {
+    height: 420px;
+    width: 270px;
+}
